# TreSucMs-TCGA

./: .gitattributes  .gitignore  MANIFEST.in  README.md  setup.cfg
docs/: .buildinfo  .nojekyll  _sources  _static  genindex.html  index.html  index.md  index_back.html  objects.inv  py-modindex.html  report.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/documentation/: tutorial.rst.txt
src/doc/: conf.py  index.rst  report.html
src/doc/_build/doctrees/: environment.pickle  index.doctree  index_back.doctree
src/doc/wiki/: DESeq2.md  conda.md  doc_progress_deseq2.md  environment.md  index.md
src/docs/: index_back.html
src/shared/: Snakefile  Snakefile_temp  config.yaml  download_with_api.py  report.html
src/shared/envs/: pandas_natsort.yaml  pandas_pybedtools.py  pandas_pybedtools_lifelines_matplotlib.yaml  pandas_pypdf_seaborn.yaml  pandas_pypdf_seaborn_natsort.yaml  pheatmap.yaml  pybedtools_matpl_seaborn.yaml  request.yaml  seab_matplot_plotl.yaml  seab_matplot_plotl_2.yaml
src/shared/modules/: aggregate_lifelines_all.py  choose_therapy.py  download_with_api.py  main.py  merge_pdfs.py  set_logger.py
src/shared/report_src/: custom-stylesheet.css  workflow.rst
src/shared/resources/: DESeq2_treatment_heatmap_table.tsv
src/shared/scripts/: create_merged_tables.py  create_merged_tables_multi.py  create_patient_plots.py  download_data_files.py  download_files.py  download_help_files.py  edit_annotation.py  majority_vote_all.py  merge_diffplots.py  merge_heatmaps.py  plot_thresh_diff.py  plot_thresh_diff_p_aggr.py  process_beta_file_to_ENST_info.py  sum_up_p_aggr.py
src/tcga_deseq/: Snakefile  config.yaml
src/tcga_deseq/dynamic/: thresholds.txt
src/tcga_deseq/envs/: DESeq2.yaml  gzip.yaml  pandas.yaml  pandas2.yaml  pandas_pypdf.yaml
src/tcga_deseq/modules/: DESeq2_diffexp_multifactor.R  aggregate_lifelines_all.py  create_deseq_lifeline_plots.py  create_deseq_output.py  create_matrix_new.py  create_report.py  create_summary_table.py  gzip_counts_all_cases.py  lifeline_summary_test_2.py  main.py  main__.py  main_deseq.py  vimsession
src/tcga_deseq/resources/: DESeq2_create_counts_all_cases.R  DESeq2_diffexp_multifactor.R  DRUG_combi_frequency_all.tsv
src/tcga_deseq/scripts/: aggregate_lifelines_all.py  create_counts_all_cases.py  create_deseq_lifeline_plots.py  create_deseq_lifeline_plots_validation.py  create_deseq_output.py  create_summary_table.py  evaluate_lifelines_all.py  merge_deseq_out_heatmaps.py  merge_summaries.py
src/tcga_metilene/: Snakefile  config.yaml
src/tcga_metilene/dynamic/: thresholds.txt
src/tcga_metilene/envs/: lifelines.yaml  metilene.yaml  pandas_bedtools.yaml  pandas_pypdf.yaml  pypdf.yaml  qpdf.yaml  seab_matplot_plotl.yaml  seaborn_plot.yaml
src/tcga_metilene/modules/: aggregate_lifelines_all.py  bed_intersect_metilene.py  choose_therapy.py  create_lifeline_plot.py  create_lifeline_plots_validation.py  create_metilene_out.py  create_summary_table.py  lexsort_problem.py  lifeline_plots.py  lifeline_tables.py  main.py  main_metilene.py  metilene_output.R  snips.py
src/tcga_metilene/resources/: DRUG_combi_frequency_all.tsv  metilene_linux64
src/tcga_metilene/scripts/: aggregate_lifelines_all.py  bed_intersect_metilene.py  create_lifeline_plots.py  create_lifeline_plots_validation.py  create_metilene_out.py  create_summary_table.py  evaluate_lifelines_all.py  merge_DMR_region_plots.py  metilene_heatmap.R  metilene_heatmap.py  metilene_limit_qval_out.py  plot_DMR_regions.py  plot_thresh_diff.py  streamlit_metilene_intersect.py
suppl/: DESeq2_treatment_heatmap_plotly.html  metilene_treatment_heatmap_plotly.html  metilene_treatment_heatmap_table.tsv  report.html
(+51 files in other folders)
