[metadata]
name = TREMSUCS
version = 1.0.0
description = Analysis tool for methylation and expression data to estimate therapy specific treatment success.

[options]
package_dir =
    = src
packages=find:
zip_safe = True
include_package_data = True
install_requires =
    click == 8.1.6
    snakemake == 7.32.4
    pandas == 2.2.1
    urllib3 == 2.1.0
    pygments == 2.17.2
    #urllib == 3.12.3  # -> this is needed by pip, before actually any dependencies can be installed -> if missing install with conda or mamba
    importlib-metadata
    importlib_metadata
    #PyYAML >= 6.0
    #typer

# for the htseq and liftover files we need some metadata stored withing the
# project
#[options.package_data]
#* = src/(tcga_deseq|tcga_metilene|shared)/resources/*
#* = tcga*/resources/*
#shared = shared/resources/*
#treatment_table = shared/resources/DESeq2_treatment_heatmap_table.tsv
#tcga_metilene = *sty, *pdf, *md, *tsv, *bed
#tcga_metilene = src/resources/GCv36_Manifests/*.tsv
#tcga_metilene = *sty, *pdf, *md, *tsv, *bed
#* = README.md
#* = *

[options.data_files]
man/man1 = src/doc/_build/man/tremsucs.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    TREMSUCS = shared.modules.main:call_with_options
    #tcga_metilene = tcga_metilene.modules.main:call_with_options
    #tcga_deseq = tcga_deseq.modules.main:call_with_options
